{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 136,
  "lineage": "fdac4fa9-832a-744f-cd03-ef633f33606c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:079056339674:vpc/vpc-a30620d9",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-c50635a9",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-e7ba799d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-a30620d9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-5ab71a24",
            "owner_id": "079056339674",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:loadbalancer/app/samantha-lb-tf/85a32c6c363c0aa9",
            "arn_suffix": "app/samantha-lb-tf/85a32c6c363c0aa9",
            "dns_name": "samantha-lb-tf-1780696770.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:079056339674:loadbalancer/app/samantha-lb-tf/85a32c6c363c0aa9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "samantha-lb-tf",
            "security_groups": [
              "sg-0353f70cd54262227"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-ac5f4f82"
              },
              {
                "subnet_id": "subnet-e878b4e6"
              },
              {
                "subnet_id": "subnet-eba9beb7"
              }
            ],
            "subnets": [
              "subnet-ac5f4f82",
              "subnet-e878b4e6",
              "subnet-eba9beb7"
            ],
            "vpc_id": "vpc-a30620d9",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "admin_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:listener/app/samantha-lb-tf/85a32c6c363c0aa9/88e7c616a2c677ef",
            "certificate_arn": "arn:aws:acm:us-east-1:079056339674:certificate/26c59fef-a5e1-4f24-90e8-a94cda70d1f3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-admin/6a72af93ac10a997",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:079056339674:listener/app/samantha-lb-tf/85a32c6c363c0aa9/88e7c616a2c677ef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:loadbalancer/app/samantha-lb-tf/85a32c6c363c0aa9",
            "port": 3030,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group_admin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hasura_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:listener/app/samantha-lb-tf/85a32c6c363c0aa9/1b3e6b94d820632d",
            "certificate_arn": "arn:aws:acm:us-east-1:079056339674:certificate/26c59fef-a5e1-4f24-90e8-a94cda70d1f3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-hasura/008fe8093e201af4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:079056339674:listener/app/samantha-lb-tf/85a32c6c363c0aa9/1b3e6b94d820632d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:loadbalancer/app/samantha-lb-tf/85a32c6c363c0aa9",
            "port": 8080,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group_hasura"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "server_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:listener/app/samantha-lb-tf/85a32c6c363c0aa9/f934a23acf9ff9ef",
            "certificate_arn": "arn:aws:acm:us-east-1:079056339674:certificate/26c59fef-a5e1-4f24-90e8-a94cda70d1f3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-server/de31d41bb68396dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:079056339674:listener/app/samantha-lb-tf/85a32c6c363c0aa9/f934a23acf9ff9ef",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:loadbalancer/app/samantha-lb-tf/85a32c6c363c0aa9",
            "port": 3000,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:listener/app/samantha-lb-tf/85a32c6c363c0aa9/8d7624aeaaaa4ca5",
            "certificate_arn": "arn:aws:acm:us-east-1:079056339674:certificate/26c59fef-a5e1-4f24-90e8-a94cda70d1f3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-web/2f17cf4e7973550e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:079056339674:listener/app/samantha-lb-tf/85a32c6c363c0aa9/8d7624aeaaaa4ca5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:loadbalancer/app/samantha-lb-tf/85a32c6c363c0aa9",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group_web",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_admin",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-admin/6a72af93ac10a997",
            "arn_suffix": "targetgroup/samantha-target-group-admin/6a72af93ac10a997",
            "deregistration_delay": 120,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-admin/6a72af93ac10a997",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "samantha-target-group-admin",
            "port": 3030,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-a30620d9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_hasura",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-hasura/008fe8093e201af4",
            "arn_suffix": "targetgroup/samantha-target-group-hasura/008fe8093e201af4",
            "deregistration_delay": 120,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/v1/version",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-hasura/008fe8093e201af4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "samantha-target-group-hasura",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-a30620d9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-server/de31d41bb68396dc",
            "arn_suffix": "targetgroup/samantha-target-group-server/de31d41bb68396dc",
            "deregistration_delay": 120,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-server/de31d41bb68396dc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "samantha-target-group-server",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-a30620d9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-web/2f17cf4e7973550e",
            "arn_suffix": "targetgroup/samantha-target-group-web/2f17cf4e7973550e",
            "deregistration_delay": 120,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:079056339674:targetgroup/samantha-target-group-web/2f17cf4e7973550e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "samantha-target-group-web",
            "port": 2000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-a30620d9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:079056339674:security-group/sg-0353f70cd54262227",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0353f70cd54262227",
            "ingress": [
              {
                "cidr_blocks": [
                  "67.180.84.92/32",
                  "71.198.133.9/32",
                  "98.248.138.166/32",
                  "76.95.235.24/32",
                  "67.161.45.56/32",
                  "24.6.72.244/32",
                  "67.160.87.43/32"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-e25dbbb4"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "67.180.84.92/32",
                  "71.198.133.9/32",
                  "98.248.138.166/32",
                  "76.95.235.24/32",
                  "67.161.45.56/32",
                  "24.6.72.244/32",
                  "67.160.87.43/32"
                ],
                "description": "",
                "from_port": 3030,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-e25dbbb4"
                ],
                "self": false,
                "to_port": 3030
              },
              {
                "cidr_blocks": [
                  "67.180.84.92/32",
                  "71.198.133.9/32",
                  "98.248.138.166/32",
                  "76.95.235.24/32",
                  "67.161.45.56/32",
                  "24.6.72.244/32",
                  "67.160.87.43/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-e25dbbb4"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "67.180.84.92/32",
                  "71.198.133.9/32",
                  "98.248.138.166/32",
                  "76.95.235.24/32",
                  "67.161.45.56/32",
                  "24.6.72.244/32",
                  "67.160.87.43/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-e25dbbb4"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20200526010221630000000001",
            "name_prefix": null,
            "owner_id": "079056339674",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-a30620d9"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:079056339674:security-group/sg-039737a157d710dc3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039737a157d710dc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "67.180.84.92/32",
                  "71.198.133.9/32",
                  "98.248.138.166/32",
                  "76.95.235.24/32",
                  "67.161.45.56/32",
                  "24.6.72.244/32",
                  "67.160.87.43/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0353f70cd54262227",
                  "sg-e25dbbb4"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20200526010240623100000003",
            "name_prefix": null,
            "owner_id": "079056339674",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-a30620d9"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}